--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@
 
 # debug information files
 *.dwo
+# ===== Python =====
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.ipynb_checkpoints
+.env
+.venv
+*.egg-info/
